--- a/rev.html
+++ b/rev.html
@@ -20,7 +20,7 @@
             width: 300px;
             height: 200px;
             margin: 20px auto;
-            background-image: url('https://raw.githubusercontent.com/<USERNAME>/125/main/images/img05/20260206160404000.jpg');
+            background-image: url('https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg');
             background-size: cover;
             background-position: center;
             border: 2px solid #333;
@@ -42,12 +42,12 @@
     <h1>Affichage de l'image depuis GitHub</h1>
 
     <h2>1. Image simple</h2>
-    <img src="https://raw.githubusercontent.com/<USERNAME>/125/main/images/img05/20260206160404000.jpg" alt="Image simple" width="300">
+    <img src="https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg" alt="Image simple" width="300">
 
     <h2>2. Image comme background d'un div</h2>
     <div class="bg-image"></div>
 
     <h2>3. Image avec effet zoom au survol</h2>
-    <img src="https://raw.githubusercontent.com/<USERNAME>/125/main/images/img05/20260206160404000.jpg" alt="Image zoom" class="zoom-img">
+    <img src="https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg" alt="Image zoom" class="zoom-img">
 </body>
 </html>
