--- a/rev.html
+++ b/rev.html
@@ -87,6 +87,6 @@
     <!-- 5. Image circulaire (URL absolue) -->
     <h2>5. Image circulaire (URL absolue)</h2>
     <img src="https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg" alt="Image circulaire" class="circle-img">
-
+zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
 </body>
 </html>
