--- a/rev.html
+++ b/rev.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Debug Image GitHub</title>
-
-<style>
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 20px;
-}
-
-img {
-    width: 300px;
-    margin: 20px;
-    border: 2px solid #333;
-}
-
-#log {
-    margin-top: 20px;
-    padding: 10px;
-    background: #f4f4f4;
-    border: 1px solid #ccc;
-    text-align: left;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 14px;
-}
-.success { color: green; }
-.error { color: red; }
-</style>
-</head>
-
-<body>
-
-<h1>Test Debug Image GitHub</h1>
-
-<img id="test-img"
-     src="https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg"
-     alt="Test Image">
-
-<div id="log">Logs :</div>
-
-<script>
-
-const imageUrl = "https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/20260206160404000.jpg";
-const img = document.getElementById("test-img");
-const logDiv = document.getElementById("log");
-
-function log(message, type="") {
-    console.log(message);
-    const p = document.createElement("p");
-    p.textContent = message;
-    if(type) p.className = type;
-    logDiv.appendChild(p);
-}
-
-/* ===== Image Load Events ===== */
-
-img.onload = function() {
-    log("✅ Image chargée avec succès", "success");
-};
-
-img.onerror = function(e) {
-    log("❌ Erreur de chargement de l'image", "error");
-    log("Vérifiez le chemin ou si le fichier existe sur GitHub", "error");
-};
-
-/* ===== Fetch Test ===== */
-
-fetch(imageUrl)
-.then(response => {
-    log("Status HTTP: " + response.status);
-    if(response.ok){
-        log("✅ Le fichier existe sur GitHub", "success");
-    } else {
-        log("❌ Le fichier n'existe pas (404 ou autre erreur)", "error");
-    }
-})
-.catch(error => {
-    log("❌ Erreur réseau ou CORS", "error");
-    console.error(error);
-});
-
-</script>
-bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-</body>
-</html>
+<img src="https://github.com/marocnetmail/125/blob/main/images/img05/20260206160404000.jpg?raw=true">
