--- a/r125.html
+++ b/r125.html
@@ -748,7 +748,7 @@ body {
 <script>
 // ===== CONFIGURATION =====
 const CONFIG = {
-  jsonUrl: 'data/datajson.json?t=' + Date.now(),
+  jsonUrl: 'data/data_fusionnee.json?t=' + Date.now(),
   logosUrl: 'data/logo_media.json?t=' + Date.now(),
   maxArticles: 1000,
   imagesBasePath: 'https://github.com/marocnetmail/125/blob/main/images/img05/',
