--- a/data/c126.html
+++ b/data/c126.html
@@ -1,113 +1,180 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-<title>Diagnostic Image GitHub</title>
+<meta name="theme-color" content="#001122">
+<title>مراجعة الصحافة الأسبوعية</title>
+
+<!-- Performance -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 <style>
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-    background: #f5f5f5;
+html {
+  scroll-behavior: smooth;
 }
 
-h1 {
-    margin-bottom: 10px;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f4f6f9;
 }
 
 .container {
-    max-width: 600px;
-    margin: auto;
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  max-width: 1100px;
+  margin: auto;
+  padding: 15px;
 }
 
-img {
-    width: 100%;
-    max-width: 400px;
-    border-radius: 8px;
-    border: 2px solid #333;
-    margin-top: 15px;
+.main-title {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-#log {
-    margin-top: 20px;
-    text-align: left;
-    background: #111;
-    color: #eee;
-    padding: 15px;
-    border-radius: 8px;
-    font-size: 14px;
-    max-height: 200px;
-    overflow-y: auto;
+.main-title img {
+  max-width: 100%;
+  height: auto;
 }
 
-.success { color: #00e676; }
-.error { color: #ff5252; }
-.info { color: #40c4ff; }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 15px;
+}
+
+.article-card {
+  background: white;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+  transition: transform 0.2s ease;
+  will-change: transform;
+}
+
+.article-card:hover {
+  transform: translateY(-5px);
+}
+
+.article-image {
+  height: 200px;
+  overflow: hidden;
+  background: #ddd;
+}
+
+.article-content {
+  padding: 15px;
+}
+
+.article-title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.loading {
+  text-align: center;
+  padding: 40px;
+  font-size: 18px;
+}
 </style>
 </head>
 
 <body>
 
 <div class="container">
-    <h1>Test Image GitHub</h1>
 
-    <p>Diagnostic complet de chargement image</p>
+  <div class="main-title">
+    <img src="images/title.png" alt="مراجعة الصحافة الأسبوعية">
+  </div>
 
-    <img id="test-img" alt="Image GitHub">
+  <div id="loading" class="loading">جاري التحميل...</div>
 
-    <div id="log">Logs :</div>
+  <div id="articles" class="grid"></div>
+
 </div>
 
 <script>
+"use strict";
 
-// ===== CONFIGURATION IMAGE =====
-const imageUrl = "https://github.com/marocnetmail/125/blob/main/images/img05/20260206160404000.jpg?raw=true";
+/* ================= CONFIG ================= */
 
-const img = document.getElementById("test-img");
-const logDiv = document.getElementById("log");
+const CONFIG = {
+  jsonUrl: 'data/data_fusionnee.json',
+  imagesBasePath: 'https://marocnetmail.github.io/125/images/img05/',
+};
 
-// ===== Fonction Log =====
-function log(message, type="info") {
-    console.log(message);
-    const p = document.createElement("div");
-    p.textContent = message;
-    p.className = type;
-    logDiv.appendChild(p);
+/* ================= UTILITIES ================= */
+
+function createImageElement(imageId, title) {
+  if (!imageId) return '';
+
+  const imageUrl = `${CONFIG.imagesBasePath}${imageId}.jpg`;
+
+  return `
+    <img 
+      src="${imageUrl}"
+      alt="${title || 'صورة'}"
+      loading="lazy"
+      decoding="async"
+      style="width:100%;height:100%;object-fit:cover;"
+      onerror="this.onerror=null; this.parentNode.innerHTML='<div style=\\'display:flex;align-items:center;justify-content:center;height:100%;color:#777;\\'>صورة غير متوفرة</div>';">
+  `;
 }
 
-// ===== Chargement Image =====
-img.onload = function() {
-    log("✅ Image chargée correctement", "success");
-};
+function createArticleCard(article) {
+  return `
+    <div class="article-card">
+      <div class="article-image">
+        ${createImageElement(article.id, article.title)}
+      </div>
+      <div class="article-content">
+        <div class="article-title">${article.title || ''}</div>
+        <div>${article.summary || ''}</div>
+      </div>
+    </div>
+  `;
+}
 
-img.onerror = function() {
-    log("❌ Erreur affichage image", "error");
-};
+/* ================= FETCH DATA ================= */
 
-// ===== Test HTTP =====
-fetch(imageUrl)
-.then(response => {
-    log("Status HTTP: " + response.status, "info");
+async function loadArticles() {
+  try {
+    const response = await fetch(CONFIG.jsonUrl, { cache: "no-store" });
 
-    if(response.ok){
-        log("✅ Le fichier existe sur GitHub", "success");
-    } else {
-        log("❌ Fichier introuvable (404 ou autre)", "error");
+    if (!response.ok) {
+      throw new Error("Erreur chargement JSON");
     }
-})
-.catch(error => {
-    log("❌ Erreur réseau ou CORS", "error");
-});
 
-// ===== Affecter la source après test =====
-img.src = imageUrl;
+    const data = await response.json();
+
+    renderArticles(data);
+
+  } catch (error) {
+    document.getElementById("loading").innerHTML =
+      "❌ Erreur de chargement des données";
+    console.error(error);
+  }
+}
+
+function renderArticles(data) {
+  const container = document.getElementById("articles");
+  const loading = document.getElementById("loading");
+
+  loading.style.display = "none";
+
+  if (!Array.isArray(data) || data.length === 0) {
+    container.innerHTML = "<p>لا توجد مقالات</p>";
+    return;
+  }
+
+  container.innerHTML = data.map(article =>
+    createArticleCard(article)
+  ).join('');
+}
+
+/* ================= INIT ================= */
+
+document.addEventListener("DOMContentLoaded", loadArticles);
 
 </script>
 
