--- a/data/c126.html
+++ b/data/c126.html
@@ -99,7 +99,7 @@ body {
 /* ================= CONFIG ================= */
 
 const CONFIG = {
-  jsonUrl: 'data/data_fusionnee.json',
+  jsonUrl: 'data_fusionnee.json',
   imagesBasePath: 'https://marocnetmail.github.io/125/images/img05/',
 };
 
