--- a/20.html
+++ b/20.html
@@ -3,26 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الصحافة الذكية</title>
+<title>الصحافة الذكية | Smart Press</title>
 
 <style>
-body{
+:root{
+    --primary:#001122;
+    --accent:#cc0000;
+    --bg:#f0f2f5;
+}
+
+*{
     margin:0;
-    font-family:Arial;
-    background:#f0f2f5;
+    padding:0;
+    box-sizing:border-box;
+}
+
+body{
+    font-family:Arial, sans-serif;
+    background:var(--bg);
     direction:rtl;
 }
 
 header{
-    background:#001122;
+    background:var(--primary);
     color:white;
     padding:15px;
     text-align:center;
     font-weight:bold;
+    font-size:18px;
 }
 
 #news-feed{
-    max-width:600px;
+    max-width:650px;
     margin:20px auto;
     padding:10px;
 }
@@ -30,48 +42,90 @@ header{
 .card{
     background:white;
     margin-bottom:20px;
-    border-radius:10px;
+    border-radius:12px;
     overflow:hidden;
-    box-shadow:0 4px 10px rgba(0,0,0,.1);
+    box-shadow:0 4px 15px rgba(0,0,0,.1);
+    cursor:pointer;
+    transition:0.3s;
+}
+
+.card:hover{
+    transform:translateY(-4px);
 }
 
 .card img{
     width:100%;
-    height:250px;
+    height:260px;
     object-fit:cover;
+    display:block;
 }
 
-.card h3{
-    padding:10px;
+.card-content{
+    padding:12px;
+}
+
+.card-title{
     font-size:16px;
+    font-weight:bold;
+    margin-bottom:8px;
+}
+
+.card-meta{
+    font-size:13px;
+    color:#555;
+}
+
+.loader{
+    text-align:center;
+    padding:40px;
 }
 </style>
 </head>
+
 <body>
 
 <header>الصحافة الذكية</header>
 
 <div id="news-feed">
-تحميل...
+    <div class="loader">جاري تحميل الأخبار...</div>
 </div>
 
 <script>
 
-const JSON_URL = "https://raw.githubusercontent.com/marocnetmail/125/main/data/data_fusionnee.json";
-const IMAGE_BASE = "https://raw.githubusercontent.com/marocnetmail/125/main/images/img05/";
+// ✅ JSON via GitHub Pages
+const JSON_URL = "https://marocnetmail.github.io/125/data/data_fusionnee.json";
+
+// ✅ Images via GitHub Pages
+const IMAGE_BASE = "https://marocnetmail.github.io/125/images/img05/";
 
 async function loadNews(){
+
     const container = document.getElementById("news-feed");
 
     try{
-        const res = await fetch(JSON_URL);
-        const data = await res.json();
+
+        const response = await fetch(JSON_URL + "?v=" + Date.now());
+
+        if(!response.ok){
+            throw new Error("Erreur chargement JSON");
+        }
+
+        const data = await response.json();
 
         container.innerHTML = "";
 
-        data.slice(0,10).forEach(item => {
+        // Filtrer visible
+        const visibleNews = data.filter(item =>
+            item.visible === true || item.visible === "true"
+        );
 
-            // ⚠️ IMPORTANT : vérifier si id existe
+        if(visibleNews.length === 0){
+            container.innerHTML = "<div class='loader'>لا توجد أخبار حالياً</div>";
+            return;
+        }
+
+        visibleNews.slice(0,20).forEach(item => {
+
             if(!item.id) return;
 
             const imgUrl = IMAGE_BASE + item.id + ".jpg";
@@ -82,16 +136,36 @@ async function loadNews(){
             card.innerHTML = `
                 <img src="${imgUrl}"
                      loading="lazy"
-                     onerror="this.src='https://via.placeholder.com/600x400?text=Image+Non+Disponible'">
-                <h3>${item.titre || item.title || "Sans titre"}</h3>
+                     onerror="this.onerror=null;this.src='https://via.placeholder.com/600x400/001122/FFFFFF?text=Smart+Press'">
+
+                <div class="card-content">
+                    <div class="card-title">
+                        ${item.titre || item.title || "بدون عنوان"}
+                    </div>
+                    <div class="card-meta">
+                        ${item["date/heure"] || ""}
+                    </div>
+                </div>
             `;
 
+            if(item.url){
+                card.onclick = () => window.open(item.url,'_blank');
+            }
+
             container.appendChild(card);
+
         });
 
-    }catch(e){
-        container.innerHTML = "❌ Erreur chargement JSON";
-        console.error(e);
+    }catch(error){
+
+        console.error(error);
+
+        container.innerHTML = `
+            <div class='loader'>
+                ❌ خطأ في تحميل البيانات<br><br>
+                تأكد أن GitHub Pages مفعل
+            </div>
+        `;
     }
 }
 
