--- a/20.html
+++ b/20.html
@@ -157,7 +157,7 @@
 
 <script>
     const CONFIG = {
-        JSON_URL: "https://marocnetmail.github.io/125/data/data_fusionnee.json",
+        JSON_URL: "data/data_fusionnee.json",
         IMAGE_BASE: "https://marocnetmail.github.io/125/images/img05/",
         PLACEHOLDER: "https://via.placeholder.com/600x400/001122/FFFFFF?text=Smart+Press"
     };
